fixing issues with screen heights under 400px aka landscape on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,10 @@ body{
   color: #626260;
 }
 #demo{
-  font-size: 60px;
+  margin-top: 25px;
+  font-size: 45px;
   color: #626260;
+  font-weight: lighter;
 }
 
 @media (max-width: 700px){
@@ -92,6 +94,54 @@ body{
 
     }
 }
+@media (max-height:400px){
+  .demo-card-wide.mdl-card {
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    top: 3px;
+    color: white;
+    opacity: 0.9;
+    filter: alpha(opacity=90);
+  }
+  #toptitle{
+    position: relative;
+    font-size: 35px;
+    top: 5px;
+  }
+  #titleblock{
+      position: absolute;
+      width: 300px;
+      height: 50px;
+      background-color: #626260;
+      text-align: center;
+      }
+      #subtitle{
+        position: relative;
+        top: -10px;
+        font-size: 20px;
+      }
+      #weathericon{
+        font-size: 100px;
+        margin-top: 28px;
+        color: #626260;
+      }
+      #weather{
+        color: #626260;
+        font-size: 45px;
+        font-weight: lighter;
+      }
+      #temp{
+        font-size:45px;
+        color: #626260;
+      }
+      #demo{
+        margin-top: 20px;
+        margin-bottom: 20px;
+        font-size: 30px;
+        color: #626260;
+      }
+}
 @media (max-width: 360px){
   #toptitle{
     position: relative;
@@ -121,7 +171,7 @@ body{
     }
     #weathericon{
       font-size: 100px;
-      margin-top: 100px;
+      margin-top: 70px;
       color: #626260;
     }
     #weather{
@@ -134,7 +184,8 @@ body{
       color: #626260;
     }
     #demo{
-      font-size: 45px;
+      margin-top: 20px;
+      font-size: 30px;
       color: #626260;
     }
 
